--- a/temp1.html
+++ b/temp1.html
@@ -714,111 +714,202 @@ function shuffle(array) {
 }
 
 function AischedulerAdaptiveRound(activePlayers = null) {
+  // === preserve your schedulerState shape ===
   const {
-    players,
+    players: allPlayers,
     numCourts,
     fixedPairs,
     restCount,
-    playedTogether,
-    playedAgainst,
+    playedTogether,   // your Map-like structure (.has, .set)
+    playedAgainst,    // Set-like (.has, .add)
     fixedMap
   } = schedulerState;
 
-  const totalPlayers = players.length;
-  const numPlayersPerRound = numCourts * 4;
-  const numResting = Math.max(totalPlayers - numPlayersPerRound, 0);
+  // decide participants for this round (activePlayers optional)
+  const currentPlayers = (activePlayers && activePlayers.length) ? activePlayers : allPlayers;
+
+  // increment round index exactly once (same style as your code)
   schedulerState.roundIndex = (schedulerState.roundIndex || 0) + 1;
+  const roundIndex = schedulerState.roundIndex;
 
-  const shuffle = arr => arr.sort(() => Math.random() - 0.5);
-  const currentPlayers = activePlayers && activePlayers.length ? activePlayers : players;
-
-  // === MODE 1: Unique Pair Algorithm (≤8 players) ===
-  if (currentPlayers.length <= 8) {
-    const pairs = [];
-    const usedPlayers = new Set();
-
-    // 1️⃣ Add fixed pairs first
-    for (const [p1, p2] of (fixedMap || new Map()).entries()) {
-      if (
-        currentPlayers.includes(p1) &&
-        currentPlayers.includes(p2) &&
-        !usedPlayers.has(p1) &&
-        !usedPlayers.has(p2)
-      ) {
-        pairs.push([p1, p2]);
-        usedPlayers.add(p1);
-        usedPlayers.add(p2);
-      }
+  // some helpers (kept simple and compatible)
+  const shuffle = arr => {
+    const a = arr.slice();
+    for (let i = a.length - 1; i > 0; i--) {
+      const j = Math.floor(Math.random() * (i + 1));
+      [a[i], a[j]] = [a[j], a[i]];
     }
+    return a;
+  };
 
-    // 2️⃣ Generate free pairs
-    const freePlayers = currentPlayers.filter(p => !usedPlayers.has(p));
-    for (let i = 0; i < freePlayers.length - 1; i++) {
-      for (let j = i + 1; j < freePlayers.length; j++) {
-        pairs.push([freePlayers[i], freePlayers[j]]);
-      }
-    }
+  // how many courts we can realistically fill with available players
+  const maxCourtsPossible = Math.floor(currentPlayers.length / 4);
+  const maxCourts = Math.min(numCourts, Math.max(0, maxCourtsPossible));
 
-    // 3️⃣ Build valid games (no overlap)
-    const games = [];
-    const usedPairs = new Set();
-    for (let i = 0; i < pairs.length - 1; i++) {
-      for (let j = i + 1; j < pairs.length; j++) {
-        const allPlayers = [...pairs[i], ...pairs[j]];
-        if (new Set(allPlayers).size === 4) {
-          const key1 = pairs[i].sort().join("&");
-          const key2 = pairs[j].sort().join("&");
-          if (!usedPairs.has(key1) && !usedPairs.has(key2)) {
-            games.push({ pair1: pairs[i], pair2: pairs[j] });
-            usedPairs.add(key1);
-            usedPairs.add(key2);
-          }
-        }
-      }
-    }
-
-    const selectedGames = shuffle(games).slice(0, numCourts);
-
-    // 4️⃣ Resting players
-    const used = new Set(selectedGames.flatMap(g => [...g.pair1, ...g.pair2]));
-    const resting = currentPlayers.filter(p => !used.has(p));
-
-    // Update rest counts
-    resting.forEach(p => restCount.set(p, (restCount.get(p) || 0) + 1));
-    const restingWithNumber = resting.map(p => `${p}#${restCount.get(p)}`);
-
-    // 5️⃣ Players actually playing
-    const playing = currentPlayers.filter(p => !resting.includes(p));
-
-    // 6️⃣ Update fairness memory
-    selectedGames.forEach(g => {
-      g.pair1.forEach(a => g.pair1.forEach(b => { if (a !== b) playedTogether.add([a, b].sort().join("&")); }));
-      g.pair2.forEach(a => g.pair2.forEach(b => { if (a !== b) playedTogether.add([a, b].sort().join("&")); }));
-      g.pair1.forEach(a => g.pair2.forEach(b => { playedAgainst.add([a, b].sort().join("&")); }));
-    });
-
-    // ✅ Return in your exact format
+  // If there are >8 players we delegate to your existing fairness scheduler --
+  // preserving all its inner heuristics, resting logic and output format.
+  // (We pass currentPlayers so it can use a dynamic active list if your AischedulerNextRound supports it)
+  if (currentPlayers.length > 8) {
+    // call your original function (assumed to accept optional players list)
+    // If your AischedulerNextRound doesn't accept players param, it will still use schedulerState.players.
+    const result = AischedulerNextRound(currentPlayers);
+    // Ensure we return the exact same shape
     return {
-      round: schedulerState.roundIndex,
-      resting: restingWithNumber,
-      playing,
-      games: selectedGames.map((g, i) => ({
-        court: i + 1,
-        pair1: g.pair1,
-        pair2: g.pair2
-      }))
+      round: result.round,
+      resting: result.resting,
+      playing: result.playing,
+      games: result.games
     };
   }
 
-  // === MODE 2: Fair Rotation (for >8 players)
-  const result = AischedulerNextRound(currentPlayers);
+  // -------------------------
+  // UNIQUE-PAIRS MODE (<=8 players)
+  // -------------------------
+  // Build candidate pairs while respecting fixedMap first, then free players.
+  const pairs = [];
+  const pairedPlayers = new Set();
+
+  // 1) add fixed pairs if both players present and not already used
+  if (fixedMap && typeof fixedMap.entries === 'function') {
+    for (const [p1, p2] of fixedMap.entries()) {
+      if (
+        currentPlayers.includes(p1) &&
+        currentPlayers.includes(p2) &&
+        !pairedPlayers.has(p1) &&
+        !pairedPlayers.has(p2)
+      ) {
+        const key = [p1, p2].slice().sort().join("&");
+        pairs.push({ p1, p2, key, played: playedTogether.has(key) });
+        pairedPlayers.add(p1);
+        pairedPlayers.add(p2);
+      }
+    }
+  }
+
+  // 2) generate all possible pairs from remaining free players
+  const freePlayers = currentPlayers.filter(p => !pairedPlayers.has(p));
+  for (let i = 0; i < freePlayers.length - 1; i++) {
+    for (let j = i + 1; j < freePlayers.length; j++) {
+      const p1 = freePlayers[i], p2 = freePlayers[j];
+      const key = [p1, p2].slice().sort().join("&");
+      pairs.push({ p1, p2, key, played: playedTogether.has(key) });
+    }
+  }
+
+  // 3) Prefer unplayed pairs when forming pair pool (same idea as your original code)
+  const unplayedPairs = pairs.filter(x => !x.played);
+  // If there are not enough unplayed pairs to potentially fill courts, fall back to all pairs
+  const pool = (unplayedPairs.length >= (Math.ceil(currentPlayers.length / 2))) ? unplayedPairs : pairs;
+  const shuffledPool = shuffle(pool);
+
+  // 4) Greedy selection of disjoint pairs (pairing players) trying to maximize unplayed pairs
+  const chosenPairs = [];
+  const usedPlayers = new Set();
+  for (const item of shuffledPool) {
+    const { p1, p2, key } = item;
+    if (!usedPlayers.has(p1) && !usedPlayers.has(p2)) {
+      chosenPairs.push([p1, p2, key]);
+      usedPlayers.add(p1);
+      usedPlayers.add(p2);
+      // mark playedTogether in same style as your function
+      playedTogether.set(key, roundIndex);
+    }
+  }
+
+  // 5) If some players still free and we need to fill pairs (so courts can be filled),
+  // try a final pass over remaining players to create pairs (even if they were in usedPlayers set earlier)
+  // BUT do not break chosenPairs players — instead, pair remaining free players sequentially.
+  const freeAfterChosen = currentPlayers.filter(p => !usedPlayers.has(p));
+  while (freeAfterChosen.length >= 2 && chosenPairs.length < (maxCourts * 2)) {
+    const p1 = freeAfterChosen.shift();
+    const p2 = freeAfterChosen.shift();
+    const key = [p1, p2].slice().sort().join("&");
+    chosenPairs.push([p1, p2, key]);
+    usedPlayers.add(p1);
+    usedPlayers.add(p2);
+    playedTogether.set(key, roundIndex);
+  }
+
+  // Now we have a pool of chosenPairs (each element [p1,p2,key]).
+  // Form games: combine two disjoint pairs into a game while avoiding reused players within same game,
+  // and prefer matchups not in playedAgainst if possible.
+  const pairObjs = chosenPairs.map(x => ({ pair: [x[0], x[1]], key: x[2] }));
+
+  // build all possible pair vs pair matchups from pairObjs
+  const allMatchups = [];
+  for (let i = 0; i < pairObjs.length - 1; i++) {
+    for (let j = i + 1; j < pairObjs.length; j++) {
+      const pA = pairObjs[i].pair, pB = pairObjs[j].pair;
+      const playersInMatch = [...pA, ...pB];
+      if (new Set(playersInMatch).size === 4) {
+        const matchupKey = playersInMatch.slice().sort().join("&");
+        const bothNew = !playedAgainst.has(matchupKey);
+        allMatchups.push({
+          pair1: pA,
+          pair2: pB,
+          matchupKey,
+          bothNew
+        });
+      }
+    }
+  }
+
+  // prefer matchups where bothNew === true
+  allMatchups.sort((a, b) => (b.bothNew ? 1 : 0) - (a.bothNew ? 1 : 0));
+
+  // select up to maxCourts matchups while ensuring no player overlaps across selected games
+  const games = [];
+  const playersUsedInGames = new Set();
+  for (const m of allMatchups) {
+    if (games.length >= maxCourts) break;
+    const allP = [...m.pair1, ...m.pair2];
+    if (allP.some(p => playersUsedInGames.has(p))) continue;
+    games.push({
+      court: games.length + 1,
+      pair1: m.pair1,
+      pair2: m.pair2
+    });
+    allP.forEach(p => playersUsedInGames.add(p));
+    // record playedAgainst exactly as you used earlier
+    playedAgainst.add(m.matchupKey);
+  }
+
+  // If no games could be formed (rare), but we have at least one chosenPair and at least 4 players,
+  // form a fallback single court from first two disjoint pairs if possible.
+  if (games.length === 0 && pairObjs.length >= 2) {
+    // try to find two disjoint pairs
+    let found = false;
+    for (let i = 0; i < pairObjs.length - 1 && !found; i++) {
+      for (let j = i + 1; j < pairObjs.length && !found; j++) {
+        const allP = [...pairObjs[i].pair, ...pairObjs[j].pair];
+        if (new Set(allP).size === 4) {
+          const matchupKey = allP.slice().sort().join("&");
+          games.push({ court: 1, pair1: pairObjs[i].pair, pair2: pairObjs[j].pair });
+          playedAgainst.add(matchupKey);
+          found = true;
+        }
+      }
+    }
+  }
+
+  // compute resting players: all currentPlayers who were not used in games
+  const playing = currentPlayers.filter(p => playersUsedInGames.has(p));
+  const resting = currentPlayers.filter(p => !playersUsedInGames.has(p));
+
+  // Update restCount entries for resting players
+  resting.forEach(p => restCount.set(p, (restCount.get(p) || 0) + 1));
+  const restingWithNumber = resting.map(p => `${p}#${restCount.get(p)}`);
+
+  // final return in your required shape
   return {
-    round: result.round,
-    resting: result.resting,
-    playing: result.playing,
-    games: result.games
+    round: roundIndex,
+    resting: restingWithNumber,
+    playing,
+    games
   };
 }
+
+
   
                                       
 function AischedulerNextRound() {
@@ -1616,6 +1707,7 @@ window.addEventListener('beforeunload', function (e) {
 
 </body>
 </html>
+
 
 
 
